--- a/remix_api/requirements.txt
+++ b/remix_api/requirements.txt
@@ -1,7 +1,8 @@
 flask
 requests
 firebase-admin
+spleeter==2.1.0
+tensorflow==2.3.0
+numpy==1.18.5
+librosa==0.8.0
 ffmpeg-python
-spleeter
-numpy
-tensorflow
