--- a/remix_api/render.yaml
+++ b/remix_api/render.yaml
@@ -2,5 +2,7 @@ services:
   - type: web
     name: remix-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install -r requirements.txt
     startCommand: python app.py
