--- a/remix_api/requirements.txt
+++ b/remix_api/requirements.txt
@@ -1,8 +1,10 @@
 flask
 requests
 firebase-admin
-spleeter==2.1.0
-tensorflow==2.3.0
-numpy==1.18.5
-librosa==0.8.0
 ffmpeg-python
+
+# Compatible versions for Spleeter
+tensorflow==2.7.0
+spleeter==2.2.2
+numpy==1.19.5
+librosa==0.8.0
