--- a/remix_api/requirements.txt
+++ b/remix_api/requirements.txt
@@ -1,7 +1,13 @@
-flask
-requests
-firebase-admin
-ffmpeg-python
+# Flask and compatible Werkzeug version to avoid url_quote error
+Flask==2.2.5
+Werkzeug==2.2.3
+
+# Core packages
+requests==2.31.0
+firebase-admin==6.4.0
+ffmpeg-python==0.2.0
+
+# Machine Learning and Audio Processing
 tensorflow==2.12.1
 spleeter==2.4.2
 numpy==1.24.3
