--- a/remix_api/requirements.txt
+++ b/remix_api/requirements.txt
@@ -1,26 +1,10 @@
-services:
-  - type: web
-    name: remix-api
-    env: python
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install -r requirements.txt
-    startCommand: python app.py
-    envVars:
-      - key: GOOGLE_APPLICATION_CREDENTIALS
-        value: firebase_credentials.json
-    plan: free
-    autoDeploy: true
-
-  - type: worker
-    name: remix-worker
-    env: python
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install -r requirements.txt
-    startCommand: python remix_worker.py
-    envVars:
-      - key: GOOGLE_APPLICATION_CREDENTIALS
-        value: firebase_credentials.json
-    plan: free
-    autoDeploy: true
+Flask==2.0.3
+Werkzeug==2.0.3
+click==7.1.2
+requests==2.31.0
+firebase-admin==6.4.0
+ffmpeg-python==0.2.0
+tensorflow==2.12.1
+spleeter==2.4.2
+numpy==1.24.3
+librosa==0.8.0
