--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==7.1.2
 requests==2.31.0
 firebase-admin==6.4.0
 ffmpeg-python==0.2.0
-tensorflow==2.12.1
+tensorflow-cpu==2.12.1          # 🔁 Changed from tensorflow to tensorflow-cpu (lighter & Render-safe)
 spleeter==2.4.2
 numpy==1.24.3
 librosa==0.8.0
