--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ tensorflow-cpu==2.12.1          # 🔁 Changed from tensorflow to tensorflow-cpu
 spleeter==2.4.2
 numpy==1.24.3
 librosa==0.8.0
+demucs==4.0.0
+torchaudio
