--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: remix-api
-    env: python
+    env: docker
     buildCommand: |
       apt-get update && apt-get install -y ffmpeg
       pip install -r requirements.txt
