--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-Flask==2.0.3
-Werkzeug==2.0.3
-click==7.1.2
-requests==2.31.0
-firebase-admin==6.4.0
-ffmpeg-python==0.2.0
-tensorflow-cpu==2.12.1
-numpy==1.24.3
-librosa==0.8.0
-demucs==4.0.0
-torchaudio==2.0.1
-torch==2.0.0
-pyngrok
-spleeter
+ Flask==2.0.3
+ Werkzeug==2.0.3
+ click==7.1.2
+ requests==2.31.0
+ firebase-admin==6.4.0
+ google-cloud-storage>=2.0.0
+ ffmpeg-python==0.2.0
+ tensorflow-cpu==2.12.1
+ numpy==1.24.3
+ librosa==0.8.0
+ demucs==4.0.0
+ torchaudio==2.0.1
+ torch==2.0.0
+ pyngrok
+ spleeter
